--- a/src/components/CourseItemDetails/index.css
+++ b/src/components/CourseItemDetails/index.css
@@ -4,3 +4,78 @@
   align-items: center;
   padding: 20px;
 }
+
+.Nel {
+  background-color: #f1f5f9;
+  padding: 20px;
+  min-height: 10vh;
+  width: 100%;
+}
+
+.Logo {
+  height: 70px;
+  width: 100px;
+}
+
+.View {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  background-color: #ffffff;
+  width: 80%;
+}
+
+.Vi {
+  height: 250px;
+  width: 250px;
+  margin-right: 10px;
+}
+
+.Vd {
+  color: #64748b;
+  font-family: 'Roboto';
+  font-size: 22px;
+}
+
+.FailCon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.FailIm {
+  height: 250px;
+  width: 250px;
+  margin-right: 16px;
+}
+
+.Fh {
+  color: #1e293b;
+  font-size: 30px;
+  font-weight: bold;
+  font-family: 'Roboto';
+}
+
+.Fp {
+  color: #475569;
+  font-size: 16px;
+  font-family: 'Roboto';
+}
+
+.Fb {
+  background-color: #4656a1;
+  color: #ffffff;
+  font-family: 'Roboto';
+  border: none;
+  padding: 7px;
+  border-radius: 3px;
+}
+
+.Vh {
+  color: #1e293b;
+  font-size: 30px;
+  font-family: 'Roboto';
+  margin-bottom: 7px;
+}
